@@ -11,16 +11,14 @@ import de.hda.fbi.efussgaengerzone.domain.model.shop.WeeklyOpeningHours;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
-
 import java.time.DayOfWeek;
-import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 public class AppointmentScheduling {
-    private static final Logger LOG = LoggerFactory.getLogger(Reporting.class);
+    private static final Logger LOG = LoggerFactory.getLogger(AppointmentScheduling.class);
     private static final Comparator<Appointment> APPOINTMENT_COMPARATOR = Comparator.comparing(Appointment::dateTime);
 
     private final AppointmentRepository appointmentRepository;
@@ -105,7 +103,7 @@ public class AppointmentScheduling {
 
         return allPossibleTimes.stream()
                 .filter(time -> !bookedTimes.contains(time))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LocalTime> availableDatesOnDay(UUID shopId, DayOfWeek dayOfWeek) throws ShopNotFoundException {
